--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
         "psr-4": {
             "kartik\\": ""
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
