--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
         "psr-4": {
             "kartik\\": ""
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.5.x-dev"
+        }
     }
 }
